name:                actionFW
version:             0.1.0.0
synopsis:            Behaviour tree library for Haskell
description:         Please see README.md
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ActionFw
                     , ActionFw.BehaviourTrees2
                     , ActionFw.BehaviourTrees21
--                     , ActionFw.BehaviourTrees3
                     , ActionFw.DataStore
                     , ActionFw.BehaviourLib
                     , ActionFw.InternalMem
                     , ActionFw.Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
                     , stm
                     , stm-containers
                     , vector
                     , mtl
                     , hashtables
  default-language:    Haskell2010

-- executable behaviourTrees-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , actionFW
--   default-language:    Haskell2010

test-suite behaviourTrees-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             BehaviourTrees2Test.hs 
-- Spec.hs
  build-depends:       base
                     , bytestring
                     , containers
                     , actionFW
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto -fprof-cafs
  default-language:    Haskell2010
